--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-starter-kit",
   "version": "1.0.0",
   "description": "Starter kit for new gulp projects",
-  "author": "Elevator Up",
+  "author": "Andrew Philpott",
   "devDependencies": {
   	"gulp": "latest",
     "gulp-autoprefixer": "latest",
@@ -13,6 +13,7 @@
     "gulp-notify": "latest",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sass-glob": "latest",
     "gulp-sourcemaps": "latest",
     "gulp-twig": "latest",
     "gulp-uglify": "^1.5.3",
